--- a/src/css/index.less
+++ b/src/css/index.less
@@ -23,6 +23,8 @@
 @import 'app/responsive';
 @import 'app/number-pad';
 @import 'app/box';
+@import 'app/tables';
+
 
 @import 'app/home';
 @import 'app/edit';
