--- a/src/html/partials/auth/upload.html
+++ b/src/html/partials/auth/upload.html
@@ -1,10 +1,7 @@
 <!--home view-->
 
 <div class="top">
-  <div class="top__background"></div>
-  <div class="top__inner">
-    <span class="icon icon--back" data-ng-click="go('/home', 'slide-right')"></span>
-  </div>
+  <div data-ng-include="'html/partials/global/top-inner.html'"></div>
 </div>
 
 <div class="center center--show-top">
