--- a/src/html/partials/create-gallery/index.html
+++ b/src/html/partials/create-gallery/index.html
@@ -1,41 +1,50 @@
-<!--home view-->
-
 <div class="top">
-  <div class="top__background"></div>
   <div class="top__inner">
-    <span class="top-icon-back icon-back" data-ng-click="go('/home', 'slide-right')"></span>
+    <span class="top-icon-back icon-back" data-ng-click="go('home', 'slide-right')"></span>
+    <span class="float-right" data-ng-click="go('/settings', 'slide-left', true)">
+    <img style="width:30px; position:relative; top:-5px; cursor:pointer;" src="img/settings.png"/>
+  </span>
   </div>
 </div>
 
 <div class="center center--show-top">
   <div class="center__inner">
 
+    <h1>{{'TITLE_CREATE_NEW' | translate}}</h1>
+
     <div data-ng-if="!galleriesLimitReached">
       <form class="form--centered"
             name="createGalleryForm"
             data-ng-submit="submitForm(createGalleryForm.$valid)"
             novalidate>
-        <h1>Create a new gallery</h1>
 
-        <p class="form__label">Enter a gallery title</p>
+
+        <p class="form__label">{{'LABEL_ENTER_TITLE' | translate}}</p>
       <span class="form__text-input-outer">
         <input class="form__text-input"
                type="text"
                data-ng-model="createGalleryFormData.galleryTitle"
                data-ng-minlength="3"
-               placeholder="YOUR TITLE"
+               placeholder=""
                required/>
       </span>
 
         <p class="text-right">
-          <button class="btn--white" type="submit" data-ng-disabled="createGalleryForm.$invalid">Continue</button>
+          <button class="btn--white" type="submit" data-ng-disabled="createGalleryForm.$invalid">{{'BTN_CONTINUE' |
+            translate}}
+          </button>
         </p>
       </form>
 
     </div>
 
     <div data-ng-if="galleriesLimitReached">
-      <p>REACHED GALLERIES LIMIT</p>
+      <h2>{{'INFO_LIMIT_REACHED_TITLE' | translate}}</h2>
+
+      <p>{{'INFO_GALLERIES_LIMIT_INFO' | translate}}</p>
+      <p>{{'INFO_NEED_MORE' | translate}}</p>
+      <p><a href="" data-ng-click="go('upgrade/option1', 'slide-left', true)">{{'UPGRADE_LABEL_GO_TO' | translate}}</a></p>
+
     </div>
 
   </div>
