--- a/src/html/partials/get-gallery/index.html
+++ b/src/html/partials/get-gallery/index.html
@@ -1,9 +1,11 @@
 <!--home view-->
 
 <div class="top">
-  <div class="top__background"></div>
   <div class="top__inner">
-    <span class="top-icon-back icon-back" data-ng-click="go('/home', 'slide-right')"></span>
+    <span class="top-icon-back icon-back" data-ng-click="go('home', 'slide-right')"></span>
+    <span class="float-right" data-ng-click="go('/settings', 'slide-left')">
+    <img style="width:30px; position:relative; top:-5px; cursor:pointer;" src="img/settings.png"/>
+  </span>
   </div>
 </div>
 
@@ -13,13 +15,14 @@
     <div class="grid">
       <div class="grid__item two-thirds">
         <form class="form" data-ng-submit="onContinueBtnClick()">
-          <h1>Import a gallery</h1>
-
-          <p class="push--bottom">Enter the gallerie´s author username and the gallery key.</p>
+          <h1>{{'SUBSCRIBE_TITLE' | translate}}</h1>
+          <p class="push--bottom">{{'SUBSCRIBE_DESCRIPTION' | translate}}</p>
 
           <div class="form__fieldset">
 
-            <p class="form__label">Username of gallery author</p>
+            <p  data-ng-show="showErrorMessage" class="form__error">Wrong username or album key!</p>
+
+            <p class="form__label">{{'SUBSCRIBE_LABEL_OWNERNAME' | translate}}</p>
 
             <div class="form__text-input-outer push--bottom">
               <input class="form__text-input"
@@ -28,7 +31,7 @@
                      placeholder="x8HLo7-f"/>
             </div>
 
-            <p class="form__label">Gallery key</p>
+            <p class="form__label">{{'SUBSCRIBE_LABEL_ACCESS_CODE' | translate}}</p>
 
             <div class="input-segments">
               <div class="input-segments__segment form__text-input-outer">
@@ -53,7 +56,7 @@
             </div>
 
             <p class="text-right push--top clear">
-              <button class="btn--white" type="submit">Continue</button>
+              <button class="btn--white" type="submit">{{'BTN_CONTINUE' | translate}}</button>
             </p>
 
           </div>
