--- a/src/html/partials/home/index.html
+++ b/src/html/partials/home/index.html
@@ -5,21 +5,27 @@
     <div class="grid__item one-whole lap-and-up-one-third main-menu__item main-menu__item--create"
          data-ng-click="go('/create-gallery', 'slide-left')">
       <div class="main-menu__item-inner">
-        <span class="main-menu__item-title">Create<span class="main-menu__item-subtitle">an album</span></span>
+        <span class="main-menu__item-title">
+          {{ 'HOME_MENU_CREATE_TITLE' | translate }}
+          <span class="main-menu__item-subtitle">{{ 'HOME_MENU_CREATE_SUBTITLE' | translate }}</span></span>
         <span class="main-menu__item-icon icon-add"></span>
       </div>
     </div>
     <div class="grid__item one-whole lap-and-up-one-third main-menu__item main-menu__item--import"
          data-ng-click="go('/get-gallery', 'slide-left')">
       <div class="main-menu__item-inner">
-        <span class="main-menu__item-title">Import<span class="main-menu__item-subtitle">an album</span></span>
+        <span class="main-menu__item-title">
+          {{ 'HOME_MENU_SUBSCRIBE_TITLE' | translate }}
+          <span class="main-menu__item-subtitle">{{ 'HOME_MENU_SUBSCRIBE_SUBTITLE' | translate }}</span></span>
         <span class="main-menu__item-icon icon-download"></span>
       </div>
     </div>
     <div class="grid__item one-whole lap-and-up-one-third main-menu__item main-menu__item--select"
          data-ng-click="go('/select-gallery', 'slide-left')">
       <div class="main-menu__item-inner">
-        <span class="main-menu__item-title">Select<span class="main-menu__item-subtitle">an album</span></span>
+        <span class="main-menu__item-title">
+          {{ 'HOME_MENU_SHOW_TITLE' | translate }}
+          <span class="main-menu__item-subtitle">{{ 'HOME_MENU_SHOW_SUBTITLE' | translate }}</span></span>
         <span class="main-menu__item-icon icon-select"></span>
       </div>
     </div>
