--- a/src/html/partials/login/index.html
+++ b/src/html/partials/login/index.html
@@ -1,9 +1,9 @@
-<!--home view-->
-
 <div class="top">
-  <div class="top__background"></div>
   <div class="top__inner">
     <span class="top-icon-back icon-back" data-ng-click="back()"></span>
+    <span class="float-right" data-ng-click="go('/settings', 'slide-left', true)">
+    <img style="width:30px; position:relative; top:-5px; cursor:pointer;" src="img/settings.png"/>
+  </span>
   </div>
 </div>
 
