--- a/src/html/partials/reset-pwd/index.html
+++ b/src/html/partials/reset-pwd/index.html
@@ -1,10 +1,7 @@
 <!--home view-->
 
 <div class="top">
-  <div class="top__background"></div>
-  <div class="top__inner">
-    <span class="top-icon-back icon-back" data-ng-click="back()"></span>
-  </div>
+  <div data-ng-include="'html/partials/global/top-inner.html'"></div>
 </div>
 
 <div class="center center--show-top">
