--- a/src/html/partials/select-gallery/index.html
+++ b/src/html/partials/select-gallery/index.html
@@ -1,17 +1,16 @@
-<!--home view-->
-
 <div class="top">
-  <div class="top__background"></div>
   <div class="top__inner">
-    <span class="top-icon-back icon-back" data-ng-click="go('/home', 'slide-right')"></span>
-    <span class="float-right" data-ng-click="go('/settings', 'slide-left')">settings</span>
+    <span class="top-icon-back icon-back" data-ng-click="go('home', 'slide-right')"></span>
+    <span class="float-right" data-ng-click="go('/settings', 'slide-left', true)">
+    <img style="width:30px; position:relative; top:-5px; cursor:pointer;" src="img/settings.png"/>
+  </span>
   </div>
 </div>
 
 <div class="center center--show-top">
   <div class="center__inner">
 
-    <h1>Select a gallery</h1>
+    <h1>{{'TITLE_SELECT_PHOTOFRAME' | translate}}</h1>
 
     <div class="preview"
          data-ng-click="onGalleryClick(gallery.galleryId)"
