--- a/src/html/partials/settings/gallery.html
+++ b/src/html/partials/settings/gallery.html
@@ -1,26 +1,36 @@
-<h2>Album settings</h2>
+<h2>{{'SETTINGS_TITLE_GALLERY' | translate}}</h2>
 
 <div class="settings">
   <div class="settings__block">
-    <div class="settings__item">
-      <span class="settings__item-label">Max number of albums</span>
-      <span class="settings__item-value">{{appSettings.maxGalleries}}</span>
+    <div class="settings__item" data-ng-click="showUpgradeInfo(0)">
+      <span class="settings__item-label">{{'SETTINGS_ACCOUNT_MAX_GALLERIES' | translate}}</span>
+      <span class="settings__item-action">{{appSettings.maxGalleries}}</span>
+      </span>
+      <div class="settings__item-info" data-ng-if="showUpgradeInfo[0]">
+        <span class="settings__item-info-label">{{'UPGRADE_LIMIT_INFO' | translate}}</span>
+        <span class="settings__item-info-action" data-ng-click="go('settings/upgrade/option1', '')">{{'UPGRADE_LABEL_GO_TO' | translate}}</span>
+      </div>
     </div>
-    <div class="settings__item">
-      <span class="settings__item-label">Max number of photos per album</span>
-      <span class="settings__item-value">{{appSettings.maxPhotos}}</span>
+    <div class="settings__item" data-ng-click="showUpgradeInfo(1)">
+      <span class="settings__item-label">{{'SETTINGS_ACCOUNT_MAX_PHOTOS' | translate}}</span>
+      <span class="settings__item-action">{{appSettings.maxPhotos}}</span>
+      <div class="settings__item-info" data-ng-if="showUpgradeInfo[1]">
+        <span class="settings__item-info-label">{{'UPGRADE_LIMIT_INFO' | translate}}</span>
+        <span class="settings__item-info-action" data-ng-click="go('settings/upgrade/option1', '')">{{'UPGRADE_LABEL_GO_TO' | translate}}</span>
+      </div>
     </div>
-    <div class="settings__item">
-      <span class="settings__item-label">Guest edit permission</span>
-      <span class="settings__item-value">{{appSettings.allowForeignUploads}}</span>
+    <div class="settings__item" data-ng-click="showUpgradeInfo(2)">
+      <span class="settings__item-label">{{'SETTINGS_ACCOUNT_ALLOW_FOREIGN_UPLOADS' | translate}}</span>
+      <span class="settings__item-action">
+        <span data-ng-if="appSettings.allowForeignUploads">{{'OPTIONS_ON' | translate}}</span>
+        <span data-ng-if="!appSettings.allowForeignUploads">{{'OPTIONS_OFF' | translate}}</span>
+      </span>
 
-      <p class="settings__item-info">Give others the permission to edit your album.</p>
+      <div class="settings__item-info" data-ng-if="showUpgradeInfo[2]">
+        <span>{{'SETTINGS_ACCOUNT_ALLOW_FOREIGN_UPLOADS_DESCRIPTION' | translate}}</span><br>
+        <span class="settings__item-info-label">{{'UPGRADE_FEATURE_INFO' | translate}}</span>
+        <span class="settings__item-info-action" data-ng-click="go('settings/upgrade/option2', '')">{{'UPGRADE_LABEL_GO_TO' | translate}}</span>
+      </div>
     </div>
   </div>
 </div>
-
-<p>You can change these settings by buying an <span data-ng-click="go('upgrade', 'slide-left')">upgrade</span>.</p>
-
-<p>
-  <button data-ng-click="go('upgrade', 'slide-left')">Upgrade</button>
-</p>
