--- a/src/html/partials/settings/index.html
+++ b/src/html/partials/settings/index.html
@@ -1,8 +1,6 @@
-<!--settings view-->
-
 <div class="top">
   <div class="top__inner">
-    <span class="top-icon-back icon-back" data-ng-click="go('edit-gallery', 'slide-right')"></span>
+    <span class="top-icon-back icon-back" data-ng-click="back(true)"></span>
   </div>
 </div>
 
@@ -12,25 +10,31 @@
   <div class="grid full-height">
     <div class="grid__item one-third full-height soft--right">
       <ul class="settings-menu">
-        <!--<li class="settings-menu__title"><h2>Settings</h2></li>-->
+        <li class="settings-menu__title"><h2>{{'SETTINGS_TITLE' | translate}}</h2></li>
         <li class="settings-menu__item"
             data-ng-class="{'active': settingsSection1 == 'gallery'}"
-            data-ng-click="go('settings/gallery', '')">Album settings
+            data-ng-click="go('settings/gallery', '')">{{'SETTINGS_TITLE_GALLERY' | translate}}
         </li>
         <li class="settings-menu__item"
             data-ng-class="{'active': settingsSection1 == 'slideshow'}"
-            data-ng-click="go('settings/slideshow', '')">Slideshow settings
+            data-ng-click="go('settings/slideshow', '')">{{'SETTINGS_TITLE_SLIDESHOW' | translate}}
         </li>
         <li class="settings-menu__item"
             data-ng-class="{'active': settingsSection1 == 'account'}"
-            data-ng-click="go('settings/account', '')">Your account
+            data-ng-click="go('settings/account', '')">{{'SETTINGS_TITLE_ACCOUNT' | translate}}
+        <li class="settings-menu__item"
+            data-ng-class="{'active': settingsSection1 == 'language'}"
+            data-ng-click="go('settings/language', '')">{{'SETTINGS_TITLE_LANGUAGE' | translate}}
+        <li class="settings-menu__item"
+            data-ng-class="{'active': settingsSection1 == 'upgrade'}"
+            data-ng-click="go('settings/upgrade', '')">{{'SETTINGS_TITLE_UPGRADE' | translate}}
       </ul>
       </li>
     </div>
 
     <div class="grid__item two-thirds full-height soft--left" data-ng-switch="settingsSection1">
       <div data-ng-switch-default>
-        <div data-ng-include="'html/partials/settings/intro.html'"></div>
+        <div data-ng-include="'html/partials/settings/gallery.html'"></div>
       </div>
       <div data-ng-switch-when="gallery">
         <div data-ng-include="'html/partials/settings/gallery.html'"></div>
@@ -40,6 +44,12 @@
       </div>
       <div data-ng-switch-when="account">
         <div data-ng-include="'html/partials/settings/account/index.html'"></div>
+      </div>
+      <div data-ng-switch-when="language">
+        <div data-ng-include="'html/partials/settings/language.html'"></div>
+      </div>
+      <div data-ng-switch-when="upgrade">
+        <div data-ng-include="'html/partials/settings/upgrade/index.html'"></div>
       </div>
     </div>
   </div>
