--- a/src/html/partials/share-gallery/index.html
+++ b/src/html/partials/share-gallery/index.html
@@ -1,8 +1,9 @@
-<!--home view-->
-
 <div class="top">
   <div class="top__inner">
-    <span class="top-icon-back icon-back" data-ng-click="back()"></span>
+    <span class="top-icon-back icon-back" data-ng-click="go('edit-gallery', 'slide-right', true)"></span>
+    <span class="float-right" data-ng-click="go('settings', 'slide-left')">
+    <img style="width:30px; position:relative; top:-5px; cursor:pointer;" src="img/settings.png"/>
+  </span>
   </div>
 </div>
 
@@ -13,14 +14,14 @@
       <div class="grid__item one-third full-height soft--right">
 
         <ul class="settings-menu">
-          <li class="settings-menu__title"><h2>Settings</h2></li>
+          <li class="settings-menu__title"><h2>{{'TITLE_SHARING' | translate}}</h2></li>
           <li class="settings-menu__item"
-              data-ng-class="{'active': sharingSection1 == 'sharing'}"
-              data-ng-click="go('share-gallery/sharing', '')">Sharing
+              data-ng-class="{'active': sharingSection1 == 'sharing' || !sharingSection1}"
+              data-ng-click="go('share-gallery/sharing', '')">{{'TITLE_SHARING_CREDENTIALS' | translate}}
           </li>
           <li class="settings-menu__item"
-              data-ng-class="{'active': sharingSection1 == 'invite'}"
-              data-ng-click="go('share-gallery/invite', '')">Invite
+              data-ng-class="{'active': sharingSection1 == 'options'}"
+              data-ng-click="go('share-gallery/options', '')">{{'TITLE_SHARING_OPTIONS' | translate}}
           </li>
         </ul>
       </div>
@@ -32,8 +33,8 @@
         <div data-ng-switch-when="sharing">
           <div data-ng-include="'html/partials/share-gallery/sharing.html'"></div>
         </div>
-        <div data-ng-switch-when="gallery">
-          <div data-ng-include="'html/partials/share-gallery/invite.html'"></div>
+        <div data-ng-switch-when="options">
+          <div data-ng-include="'html/partials/share-gallery/options.html'"></div>
         </div>
       </div>
     </div>
