--- a/src/html/partials/slideshow/index.html
+++ b/src/html/partials/slideshow/index.html
@@ -1,7 +1,10 @@
 <!-- slideshow view-->
-<div class="top top--dark">
+<div class="top">
   <div class="top__inner">
     <span class="top-icon-back icon-back" data-ng-click="back()"></span>
+    <span class="float-right" data-ng-click="go('/settings', 'slide-left', true)">
+    <img style="width:30px; position:relative; top:-5px; cursor:pointer;" src="img/settings.png"/>
+  </span>
   </div>
 </div>
 
