--- a/src/html/partials/auth/upload.html
+++ b/src/html/partials/auth/upload.html
@@ -19,6 +19,7 @@
       <div
           data-number-pad-directive
           data-number-pad-input="uploadPassword"
+          data-number-pad-input="4"
           data-number-pad-submit="uploadAuthSubmit()">
       </div>
     </div>
