--- a/src/html/partials/global/number-pad.html
+++ b/src/html/partials/global/number-pad.html
@@ -10,5 +10,5 @@
   <div class="number-pad__item number-pad__item--number-btn">9<span class="number-pad__item-bg"></span></div>
   <div class="number-pad__item number-pad__item--del-btn">del<span class="number-pad__item-bg"></span></div>
   <div class="number-pad__item number-pad__item--number-btn">0<span class="number-pad__item-bg"></span></div>
-  <div class="number-pad__item number-pad__item--submit-btn">ok<span class="number-pad__item-bg"></span></div>
+  <div class="number-pad__item number-pad__item--submit-btn">ok<span class="number-pad__item-bg--green"></span></div>
 </div>
