--- a/src/html/partials/invite/index.html
+++ b/src/html/partials/invite/index.html
@@ -11,8 +11,8 @@
       <p>Your invitation was successfully send!</p>
 
       <p>
-        <button class="btn--white" data-ng-click="back()">Back</button>
-        <button class="btn--white" data-ng-click="showInvitationForm()">Send Another</button>
+        <button class="btn--blue" data-ng-click="back()">Back</button>
+        <button class="btn--blue" data-ng-click="showInvitationForm()">Send Another</button>
       </p>
     </div>
 
@@ -22,7 +22,7 @@
       <p>Service is temporarily unavailable. Our engineers are working quickly to resolve the issue.</p>
 
       <p>
-        <button class="btn--white" data-ng-click="back()">Back</button>
+        <button class="btn--blue" data-ng-click="back()">Back</button>
       </p>
     </div>
 
@@ -59,7 +59,7 @@
         </div>
 
         <p class="text-right push--top clear">
-          <button class="btn--white" type="submit">Send</button>
+          <button class="btn--blue" type="submit">Send</button>
         </p>
 
       </div>
