--- a/src/html/partials/settings/account/reset-pwd-1.html
+++ b/src/html/partials/settings/account/reset-pwd-1.html
@@ -53,7 +53,7 @@
   </div>
 
   <div class="form__ctrl text-right">
-    <button class="btn--white" type="submit">Continue</button>
+    <button class="btn--blue" type="submit">Continue</button>
   </div>
 </form>
 
