--- a/src/html/partials/settings/gallery.html
+++ b/src/html/partials/settings/gallery.html
@@ -8,7 +8,7 @@
       </span>
       <div class="settings__item-info" data-ng-if="showUpgradeInfo[0]">
         <span class="settings__item-info-label">{{'UPGRADE_LIMIT_INFO' | translate}}</span>
-        <span class="settings__item-info-action" data-ng-click="go('settings/upgrade/option1', '')">{{'UPGRADE_LABEL_GO_TO' | translate}}</span>
+        <span class="settings__item-info-action" data-ng-click="go('settings/upgrade', '')">{{'UPGRADE_LABEL_GO_TO' | translate}}</span>
       </div>
     </div>
     <div class="settings__item" data-ng-click="showUpgradeInfo(1)">
@@ -16,7 +16,7 @@
       <span class="settings__item-action">{{appSettings.maxPhotos}}</span>
       <div class="settings__item-info" data-ng-if="showUpgradeInfo[1]">
         <span class="settings__item-info-label">{{'UPGRADE_LIMIT_INFO' | translate}}</span>
-        <span class="settings__item-info-action" data-ng-click="go('settings/upgrade/option1', '')">{{'UPGRADE_LABEL_GO_TO' | translate}}</span>
+        <span class="settings__item-info-action" data-ng-click="go('settings/upgrade', '')">{{'UPGRADE_LABEL_GO_TO' | translate}}</span>
       </div>
     </div>
     <div class="settings__item" data-ng-click="showUpgradeInfo(2)">
@@ -29,7 +29,7 @@
       <div class="settings__item-info" data-ng-if="showUpgradeInfo[2]">
         <span>{{'SETTINGS_ACCOUNT_ALLOW_FOREIGN_UPLOADS_DESCRIPTION' | translate}}</span><br>
         <span class="settings__item-info-label">{{'UPGRADE_FEATURE_INFO' | translate}}</span>
-        <span class="settings__item-info-action" data-ng-click="go('settings/upgrade/option2', '')">{{'UPGRADE_LABEL_GO_TO' | translate}}</span>
+        <span class="settings__item-info-action" data-ng-click="go('settings/upgrade', '')">{{'UPGRADE_LABEL_GO_TO' | translate}}</span>
       </div>
     </div>
   </div>
