--- a/src/html/partials/share-gallery/sharing.html
+++ b/src/html/partials/share-gallery/sharing.html
@@ -15,7 +15,7 @@
     <div class="settings__item-info" data-ng-if="showAccessKey">
       <span class="settings__item-info-label">&nbsp;</span>
     <span
-        class="settings__item-info-value">{{galleryKeySegments[0]}} - {{galleryKeySegments[1]}} - {{galleryKeySegments[2]}}</span>
+        class="settings__item-info-value">{{gallery.galleryKey}}</span>
 
     </div>
   </div>
