--- a/src/html/partials/login/index.html
+++ b/src/html/partials/login/index.html
@@ -1,8 +1,8 @@
 <div class="top">
   <div class="top__inner">
     <span class="top-icon-back icon-back" data-ng-click="back()"></span>
-    <span class="float-right" data-ng-click="go('/settings', 'slide-left', true)">
-    <img style="width:30px; position:relative; top:-5px; cursor:pointer;" src="img/settings.png"/>
+    <span class="top-icon-settings" data-ng-click="go('/settings', 'slide-left', true)">
+    <img style="width:30px; position:relative; top:-12px; cursor:pointer;" src="img/settings.png"/>
   </span>
   </div>
 </div>
@@ -60,13 +60,13 @@
       </div>
 
       <div class="form__ctrl text-right">
-        <button class="btn--white" type="submit">Continue</button>
+        <button class="btn--blue" type="submit">Continue</button>
       </div>
     </form>
-    <a href="" data-ng-click="go('/reset-pwd', 'slide-left')">Forgot password</a>
+    <a href="" data-ng-click="go('settings/account/reset-pwd', 'slide-left', true)">Forgot password</a>
 
     <p>
-      <button data-ng-click="test()">Test</button>
+      <button data-ng-click="resetApp()">!!! RESET APP !!!</button>
     </p>
 
   </div>
