--- a/src/html/partials/reset-pwd/index.html
+++ b/src/html/partials/reset-pwd/index.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="form__ctrl text-right">
-        <button class="btn--white" type="submit">Continue</button>
+        <button class="btn--blue" type="submit">Continue</button>
       </div>
     </form>
 
@@ -93,7 +93,7 @@
       </div>
 
       <div class="form__ctrl text-right">
-        <button class="btn--white" type="submit">Continue</button>
+        <button class="btn--blue" type="submit">Continue</button>
       </div>
     </form>
 
