--- a/src/html/partials/select-gallery/index.html
+++ b/src/html/partials/select-gallery/index.html
@@ -1,8 +1,8 @@
 <div class="top">
   <div class="top__inner">
     <span class="top-icon-back icon-back" data-ng-click="go('home', 'slide-right')"></span>
-    <span class="float-right" data-ng-click="go('/settings', 'slide-left', true)">
-    <img style="width:30px; position:relative; top:-5px; cursor:pointer;" src="img/settings.png"/>
+    <span class="top-icon-settings" data-ng-click="go('/settings', 'slide-left', true)">
+    <img style="width:30px; position:relative; top:-12px; cursor:pointer;" src="img/settings.png"/>
   </span>
   </div>
 </div>
