--- a/src/html/partials/signin/index.html
+++ b/src/html/partials/signin/index.html
@@ -1,8 +1,8 @@
 <div class="top">
   <div class="top__inner">
     <span class="top-icon-back icon-back" data-ng-click="back()"></span>
-    <span class="float-right" data-ng-click="go('/settings', 'slide-left', true)">
-    <img style="width:30px; position:relative; top:-5px; cursor:pointer;" src="img/settings.png"/>
+    <span class="top-icon-settings" data-ng-click="go('/settings', 'slide-left', true)">
+    <img style="width:30px; position:relative; top:-12px; cursor:pointer;" src="img/settings.png"/>
   </span>
   </div>
 </div>
@@ -95,7 +95,7 @@
       </div>
 
       <div class="form__ctrl text-right">
-        <button class="btn--white" type="submit">Continue</button>
+        <button class="btn--blue" type="submit">Continue</button>
       </div>
     </form>
   </div>
